# quark-lang

./: .gitignore  CLAUDE.md  README.md  VECTOR_SPEC.md  example.qrk  examples.md  expr_parser.py  grammar.md  hello.qrk  helper_types.py  indent_lexer.py  lex_grammar.py  lex_test.py  lexer.py  main.py  parse_test.py  philosophy.md  precedence.md  quark_lexer.py  quark_parser.py  stdlib.md  test.qrk  test_clean.qrk  test_for.qrk
.claude/: settings.local.json
benchmarks/: README.md  bench_python.py  run_benchmark.ps1
core/: lexer.py
core/ply/: lex.py
ply/: lex.py
src/: philosophy.md
src/core/: codegen.py  expr_parser.py  helper_types.py  lex_grammar.py  quark_codegen.py  quark_parser.py  semantic_analyzer.py
src/core/backend/: CMakeLists.txt  QuarkCodegen.cpp
src/core/backend/include/: codegen.h
src/core/backend/pytreetonative/: PyTreeToNativeRepr.cpp  pytreetonative.h
src/core/codegen/: CMakeLists.txt  ast.h  codegen.cpp  setup.py
src/core/quark/runtime/: CMakeLists.txt  build_runtime.ps1  build_runtime.sh
src/core/quark/runtime/include/quark/: quark.hpp
src/core/quark/runtime/include/quark/builtins/: conversion.hpp  dict.hpp  io.hpp  math.hpp  strings.hpp
src/core/quark/runtime/include/quark/core/: cell.hpp  constructors.hpp  gc.hpp  truthy.hpp  value.hpp
src/core/quark/runtime/include/quark/ops/: arithmetic.hpp  comparison.hpp  logical.hpp  member.hpp
src/core/quark/runtime/include/quark/types/: closure.hpp  dict.hpp  function.hpp  list.hpp  string.hpp  vector.hpp
src/core_new/: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  SETUP.md  ast.rs  examples.qrk  go.mod  lexer.rs  lib.rs  main.go  main.rs  parser.rs  token.rs  visualizer.rs
src/drivers/: codegen_test.py  parse_test.py  run_assembler.py  run_codegen.py
src/legacy/: requirements.txt
src/legacy/core/backend/pytreetonative/: CMakeLists.txt
src/testfiles/: smoke_break_continue.qrk  smoke_default_params.qrk  smoke_functions_closures.qrk  smoke_module_use.qrk  smoke_modules_error_graph.qrk  smoke_modules_error_resolve.qrk  smoke_modules_success.qrk  smoke_return_types.qrk  smoke_string_list_builtins.qrk  smoke_syntax.qrk  smoke_types.qrk  smoke_vectors.cpp  smoke_vectors.qrk  test.qrk  test_arrow.qrk  (+25 more)
utils/: treeviz.py
(+50 files in other folders)
